--- a/src/css/style.css
+++ b/src/css/style.css
@@ -274,3 +274,50 @@ a#menu-text {
   font-size: 1.5em;
   text-transform: uppercase;
 }
+
+.intro h1 {
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+}
+
+.intro p {
+  margin: 5%;
+}
+
+.media-card {
+  margin: 5%;
+}
+
+.media-card h1 {
+  font-size: 1.25em;
+  color: black;
+}
+
+.media-card h2 {
+  font-size: .75em;
+  font-weight: 100;
+}
+
+.contact {
+  z-index: 5;
+  position: absolute;
+  margin: 2.5% 5%;
+}
+
+#park-footer img {
+  position: absolute;
+  object-fit: cover;
+  height: 150px;
+  width: 100%;
+}
+
+.contact h1 {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: .9em;
+}
+
+.contact h2, .contact p{
+  font-size: .8em;
+  margin: 5px 0px;
+}
+
