--- a/src/css/style.css
+++ b/src/css/style.css
@@ -321,3 +321,9 @@ a#menu-text {
   margin: 5px 0px;
 }
 
+@media (min-width: 750px) {
+  .info {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
