--- a/src/css/style.css
+++ b/src/css/style.css
@@ -194,6 +194,53 @@ span, a.hero_banner_title {
   text-decoration: none;
 }
 
+.global-nav {
+  width: 100%;
+  grid-column: 1/3;
+  border-top: 2px solid #333;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 1s;
+}
+
+.global-nav button {
+  background-color: transparent;
+  border: 0;
+  padding: 1rem;
+  cursor: pointer;
+}
+
+.global-nav svg {
+  --icon-color: white;
+}
+
+.global-nav__toggle--closed {
+  display: flex;
+  align-items: center;
+}
+
+.global-nav__toggle--open {
+  display: none;
+  align-items: center;
+}
+
+.global-nav__toggle[aria-expanded="true"] .global-nav__toggle--closed {
+  display: none;
+}
+
+.global-nav__toggle[aria-expanded="true"] .global-nav__toggle--open {
+  display: flex;
+}
+
+.global-nav.show {
+  max-height: 1000px;
+}
+
+.global-nav__section-heading {
+  padding-left: 10px;
+  color: white;
+}
+
 #global-nav-toggle {
   background-color: black;
   color: white;
