--- a/src/css/style.css
+++ b/src/css/style.css
@@ -497,6 +497,92 @@ details {
   flex-direction: column;
 }
 
+/* visitor center page */
+.vc-gallery ul {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.vc-gallery li {
+  list-style-type: none;
+  margin-right: 30px;
+}
+
+.vc-gallery img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.vc-gallery svg, .vc-name svg {
+  height: 25px;
+}
+
+.vc-gallery h2 {
+  text-transform: uppercase;
+  vertical-align: baseline;
+}
+
+.vc-name {
+  border-bottom: lightgray solid 2px;
+  padding-bottom: 40px;
+  padding-top: 20px;
+}
+
+.vc-info figure figure {
+  margin: 0;
+}
+
+#vcDirections svg, #vcContacts svg, .vc-name svg  {
+  fill: black;
+}
+
+#vcAddresses svg, #vcDirections svg, #vcAmenities svg, #vcContacts svg{
+  height: 30px;
+  margin-right: 30px;
+}
+
+#vcAddresses svg:last-of-type, #vcDirections svg:last-of-type, #vcAmenities svg:last-of-type, #vcContacts svg:last-of-type{
+  margin-left: auto;
+}
+
+#vcAddresses summary, #vcDirections summary, #vcAmenities summary, #vcContacts summary{
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.summary-text {
+  color: black;
+  text-transform: uppercase;
+}
+
+#vcAddresses, #vcDirections, #vcAmenities, #vcContacts{
+  border: none;
+  border-bottom: lightgray solid 3px;
+  margin: 0;
+}
+
+.vc-details-list {
+  margin: 30px;
+}
+
+#vcAmenities ul {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+#vcAmenities li {
+  padding: 5px;
+}
+
+#vcAddresses[open] svg:last-of-type, #vcDirections[open] svg:last-of-type, #vcAmenities[open] svg:last-of-type, #vcContacts[open] svg:last-of-type{
+  transform: rotate(180deg); /* Rotate the icon */
+  transition: transform 0.3s ease; /* Add a smooth transition */
+}
+
+
 @media (min-width: 750px) {
   .info {
     display: grid;
